fix loading distorted view

--- a/src/features/user/components/CustomizeAvatarView.module.css
+++ b/src/features/user/components/CustomizeAvatarView.module.css
@@ -90,6 +90,17 @@
   cursor: grabbing;
 }
 
+.previewLoading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Jersey 10", sans-serif;
+  font-size: 16px;
+  color: #999;
+}
+
 .miiComposite {
   position: relative;
   width: 100%;
